#244: - Improve GameOutline styles - Fix context bug; null passage + jump on remove

--- a/src/components/GameOutline/styles.module.less
+++ b/src/components/GameOutline/styles.module.less
@@ -89,6 +89,10 @@
         }
       }
 
+      .title {
+        color: hsl(0, 0%, 60%);
+      }
+
       .dragging {
         padding-left: 47px;
 
@@ -99,7 +103,9 @@
       }
 
       &:hover {
-        background-color: hsl(0, 0%, 10%);
+        .title {
+          color: white;
+        }
 
         .itemIcon {
           color: hsl(0, 0%, 80%);
@@ -113,10 +119,32 @@
       }
 
       &.selected {
-        background: hsl(0, 0%, 20%);
+        background: hsl(0, 0%, 10%);
+
+        .itemIcon {
+          &.component {
+            color: var(--highlight-color) !important;
+          }
+        }
+
+        .title {
+          color: white;
+        }
 
         &:hover {
-          background: hsl(0, 0%, 25%);
+        }
+      }
+
+      &.sceneComponentSelected {
+        .itemIcon {
+          &.component {
+            color: var(--highlight-color) !important;
+          }
+        }
+
+        .title {
+          color: white;
+          text-decoration: underline;
         }
       }
 
@@ -130,7 +158,6 @@
 
         &.component {
           margin-right: 8px;
-          color: var(--highlight-color) !important;
 
           &.passage {
             margin-left: 28px;
